Fix too slow rendering of SVG with clip masks

When rendering clipping masks we need to allocate actual storage
for the shape pixels. Hence we should clip the rendering area by
the size of the toplevel painter.

BUG:458407